--- a/style.css
+++ b/style.css
@@ -1,4 +1,33 @@
-html, body {
-  height: 100%;
-  width: 100%;
+body{
+    background-color: #383848;
+    text-align: center;
+    color: #60b890;
+    position:relative
+}
+
+.headerText h1{
+    font-size: 6rem;
+    font-family: Georgia, 'Times New Roman', Times, serif;
+    margin-bottom: 10px;
+}
+
+.playText{
+    display: inline-block;
+    padding: 0px 100px;
+    font-size: 1.5rem;
+    font-family: Georgia, 'Times New Roman', Times, serif;
+}
+
+.content{
+    width: 50%;
+    margin: auto;
+}
+
+.dice{
+    margin: auto 30px;
+}
+
+.footer{
+   
+
 }
